--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .navigation {
   background-color: #111179;
@@ -28,4 +29,13 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
+}
+.section1 {
+  display: flex;
+}
+.section {
+  width: 50%;
+  background: rgb(35, 35, 156);
+  color: white;
+  padding: 20px;
 }
